# rotmd

./: .dockerignore  .gitignore  Dockerfile  MDARCHIVE_ARCHITECTURE.md  README.md  RUNTIME.md  compose.yml  devenv.nix  devenv.yaml  pyproject.toml
examples/: plumed_example.md
scripts/: README_SLURM.md  srun_extract.sh  submit_extract.slurm  submit_extract_array.slurm
scripts/hpc/: 01_prepare_plumed.sh  02_run_metad.slurm  03_continue_metad.slurm  04_analyze_fes.slurm  README.md  workflow.sh
src/rotmd/: __init__.py  cli.py  config.py
src/rotmd/analysis/: __init__.py  friction.py  nonequilibrium.py  path.py  pmf.py
src/rotmd/analysis/membrane/: __init__.py  analysis.py  base.py  curvature.py  packing.py  projection.py  properties.py  protein.py  surface.py  voro.py
src/rotmd/analysis/membrane/tests/: not_test_cases.py  test_biopolymer_2d.py  test_cumulative.py  test_membprop.py  test_packing.py  test_voronoi.py
src/rotmd/base/: helix_analysis.py  helix_distance_crossing_angle.py  helix_tilt_rotation_angle.py  membrane_interface.py
src/rotmd/core/: functional.py  inertia.py  jax_kernels.py  kernels.py  numba_kernels.py  observables_classes.py  orientation.py  torch_kernels.py  trajectory.py  vector_observables.py
src/rotmd/io/: gromacs.py  output.py  plumed.py
src/rotmd/models/: __init__.py
src/rotmd/observables/: __init__.py  unified.py
src/rotmd/src/: README.md  __init__.py  cli.py  utils.py
src/rotmd/src/analysis/: __init__.py  correlations.py  hopf_bifurcation.py  per_residue_energy.py  pmf.py  response_theory.py  transitions.py
src/rotmd/src/base/: README.md  __init__.py  beam_mechanics.py  coordinate_comparison.py  dynamics_analyzer.py  energy_terms.py  geometric_dynamics.py  statistical_analysis.py  visualization.py
src/rotmd/src/core/: __init__.py  inertia.py  orientation.py
src/rotmd/src/io/: __init__.py  gromacs.py
src/rotmd/src/models/: energy.py  langevin.py
src/rotmd/src/observables/: __init__.py  angular_momentum.py  angular_velocity.py  diffusion.py  energetics.py  structural.py  torque.py
src/rotmd/src/visualization/: __init__.py  _phase_space_physics.py  _plot_utils.py  bifurcation.py  metrics.py  phase_space.py  surfaces.py
src/rotmd/utils/: decorators.py
src/rotmd/visualization/: __init__.py  phase_space.py  spectra.py  surfaces.py
